<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/banner_image"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/banner_satu" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genres"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:breakStrategy="simple"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_semibold"
            android:maxLines="2"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
            tools:text="Beetlejuice BeetleJuice" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            tools:text="1.3M" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintEnd_toStartOf="@+id/tv_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="2024•" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toEndOf="@+id/tv_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="2h 64m•" />

        <TextView
            android:id="@+id/tv_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/production"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_year" />

        <TextView
            android:id="@+id/tv_production_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toEndOf="@+id/tv_production"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration"
            tools:text="United States" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/world_premiere"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_production" />

        <TextView
            android:id="@+id/tv_release_premiere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/tv_release"
            app:layout_constraintTop_toBottomOf="@+id/tv_production_field"
            tools:text="31 Agustus 2024" />

        <TextView
            android:id="@+id/tv_filmCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/film_crew"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_crew_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/tv_storyline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_filmCrew" />

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/storyline"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_crew_film" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline"
            tools:text="Summary" />

        <Button
            android:id="@+id/btn_like"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_favorite_border"
            app:iconTint="#FFFF0000"
            app:layout_constraintEnd_toStartOf="@+id/btn_play"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />

        <Button
            android:id="@+id/btn_play"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/baseline_play_arrow_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
